package main;

message PortConfig {
	required uint32 port = 1;
	optional string ssl_cert_path = 2;
	optional string ssl_key_path = 3;
}

message Backend {
	required string host = 1;
	required uint32 port = 2;
}

message TargetConfig {
	repeated string http_host = 1;
	repeated Backend be = 2;
	repeated string backend_uri = 3;
	optional uint32 timeout = 4;
}

message CountryBlacklistConfig {
	// Countries the blacklist should apply to.
	repeated string country = 1;

	// Error message which should be returned to the user.
	optional string error_html = 2;

	// Redirect URL which the user should be sent to. If error_html is
	// also set, it will display the message to the user and redirect
	// after timeout seconds.
	optional string redirect_url = 3;

	// Timeout after which a redirect to the redirect_url should be made
	// in case an error_html message is specified simultaneously.
	required int32 timeout = 4 [default = 120];

	// List of HTTP hosts which should be whitelisted, i.e. which will be
	// displayed even if we blacklisted the corresponding country.
	repeated string host_whitelist = 5;
}

message ReverseProxyConfig {
	repeated PortConfig port_config = 1;
	repeated TargetConfig target_config = 2;

	optional Backend forward_all = 3;

	required string access_log_path = 4;
	optional string info_server = 5;

	optional string doozer_uri = 6;
	optional string doozer_boot_uri = 7;

	// Country based blacklisting. If you want to use it, you will need to
	// specify geoip_path.
	repeated CountryBlacklistConfig blacklist = 8;
	optional string geoip_path = 9;

	// Use at least this many backend connections. This will connect to
	// multiple backends as required.
	optional int32 min_subset_size = 10;
}
